Fix stale paths in docs and config
- Replace all testdata/news/ references with testdata/hn/ (directory doesn't exist)
- Fix bootstrap example path (dataset/docs.jsonl → testdata/hn/docs.jsonl)
- Fix minimal chat-cli command (add required -stoplist/-dict/-taxonomy flags)
- Fix configs/korel.yaml paths
- Update testdata/ tree listing to match actual structure
- Document -rules flag and inference rules config

--- a/configs/korel.yaml
+++ b/configs/korel.yaml
@@ -4,9 +4,9 @@ db_path: ./data/korel.db
 snapshot_dir: ./data/snapshots
 
 # Paths to configuration files
-dict_path: testdata/news/tokens.dict
-taxonomy_path: testdata/news/taxonomies.yaml
-stoplist_path: testdata/news/stoplist.yaml
+dict_path: testdata/hn/tokens.dict
+taxonomy_path: testdata/hn/taxonomies.yaml
+stoplist_path: testdata/hn/stoplist.yaml
 
 # Hybrid scoring weights
 score_weights:
